--- a/scrapper/backend/pom.xml
+++ b/scrapper/backend/pom.xml
@@ -3,11 +3,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId>
+    <groupId>com.am</groupId>
     <artifactId>scrapper</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-
+    <name>scrapper</name>
     <properties>
         <java.version>11</java.version>
     </properties>
